--- a/index.html
+++ b/index.html
@@ -96,7 +96,9 @@
 			<div class="nav-wrapper">
 				<a href="#" class="brand-logo">賽爾號圖鑑</a>
 				<ul class="right hide-on-med-and-down">
-					<li><a class="waves-effect waves-light btn">重置</a></li>
+                    <li>
+                        <a class="waves-effect waves-light btn" onclick="window.location.href='index.html'">重置</a>
+                    </li>
 					<li>
 						<a class="waves-effect waves-light btn">進入遊戲</a>
 					</li>
@@ -113,38 +115,25 @@
 					<h1>賽爾號精靈圖鑑</h1>
 				</div>
 				<div class="col s6">
-					<div class="input-field" style="text-align: center">
-						<input id="search" type="search" required />
-						<label for="search">Search</label>
-					</div>
+                    <div class="input-field" style="text-align: center">
+                        <form action="index.html" method="get">
+                            <input id="search" type="search" name="pid" required />
+                            <label for="search">Search</label>
+                            <button type="submit" class="btn waves-effect waves-light">送出</button>
+                        </form>
+                    </div>
 				</div>
 			</div>
 		</div>
 
-		<!-- <footer class="page-footer navbar-custom">
-            <div class="container">
-                <div class="row">
-                    <div class="col l6 s12">
-                        <h5 class="white-text">賽爾號圖鑑</h5>
-                        <p class="grey-text text-lighten-4">這是一個使用Materialize設計的賽爾號精靈圖鑑網站。</p>
-                    </div>
-                    <div class="col l4 offset-l2 s12">
-                        <h5 class="white-text">連結</h5>
-                        <ul>
-                            <li><a class="grey-text text-lighten-3" href="#!">首頁</a></li>
-                            <li><a class="grey-text text-lighten-3" href="#!">關於我們</a></li>
-                            <li><a class="grey-text text-lighten-3" href="#!">聯絡我們</a></li>
-                        </ul>
-                    </div>
-                </div>
-            </div>
+		<footer class="page-footer navbar-custom" style="min-height: 0;">
             <div class="footer-copyright">
-                <div class="container">
+                <div class="container" style="padding: 0px;">
                     © 2025 賽爾號圖鑑
                     <a class="grey-text text-lighten-4 right" href="#!">更多連結</a>
                 </div>
             </div>
-        </footer> -->
+        </footer>
 
 		<!-- Compiled and minified JavaScript -->
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
@@ -270,10 +259,13 @@
 
 					let cardAction = document.createElement("div");
 					cardAction.className = "card-action";
+                    cardAction.style = "center-align";
 
 					let a = document.createElement("a");
 					a.href = "detail.html?pid=" + encodeURIComponent(no_list[i]);
 					a.textContent = "click to see more";
+                    a.style = 'margin-right: 0px';
+                    
 					cardAction.appendChild(a);
 
 					card.appendChild(cardImage);
