--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
                         <a class="waves-effect waves-light btn" onclick="window.location.href='index.html'">重置</a>
                     </li>
 					<li>
-						<a class="waves-effect waves-light btn">進入遊戲</a>
+						<a class="waves-effect waves-light btn" href="http://news.4399.com/seerjd/">進入遊戲</a>
 					</li>
 				</ul>
 			</div>
